--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "bulma": "^0.6.0",
     "firebase": "^4.5.0",
+    "vue": "^2.5.2",
     "vuex": "^3.0.0",
     "vuexfire": "^2.3.0"
   }
