--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "node-sass": "^4.5.3",
     "poi": "^9.3.10",
     "sass-loader": "^6.0.6",
+    "tachyons": "^4.8.1",
+    "tachyons-flexbox": "^2.0.5",
     "xo": "^0.18.2"
   },
   "dependencies": {
