--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bulma": "^0.6.0",
     "firebase": "^4.5.0",
     "vue": "^2.5.2",
+    "vue-router": "^3.0.1",
     "vuex": "^3.0.0",
     "vuexfire": "^2.3.0"
   }
